--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 	<body>
 		<div class="main-content">
 			{{>header}}
+			<p>This is an application for getting the current weather! It uses mapbox.com and darksky.net.</p>
 			<img class="portrait" src="/img/robot.png">
 		</div>
 		{{>footer}}
